<resources>
    <string name="app_name">Tip Calculator XML</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="tip_result">$0.00</string>
    <string-array name="tip_options_array">
        <item>15%</item>
        <item>18%</item>
        <item>20%</item>
    </string-array>
</resources>